@@ -14,7 +14,7 @@ repos:
 version:
 release:
 rpm:
-  version: 17.0.0
+  version: 18.0.0
   release: 0
   repo_name:
   org_name: manageiq
@@ -36,15 +36,15 @@ rpm_repository:
   - s390x
   - x86_64
   :content:
-    :17-quinteros:
+    :18-radjabov:
       :targets:
       - el8
       - el9
       :rpms:
         :ansible: !ruby/regexp /.+-5\.4.+/
         :kafka: !ruby/regexp /.+-3\.3.+/
-        :manageiq: !ruby/regexp /.+-17\.\d\.\d-(alpha|beta|rc)?\d(\.\d)?\.el.+/
-        :manageiq-release: !ruby/regexp /.+-17\.0.+/
+        :manageiq: !ruby/regexp /.+-18\.\d\.\d-(alpha|beta|rc)?\d(\.\d)?\.el.+/
+        :manageiq-release: !ruby/regexp /.+-18\.0.+/
         :postgresql: !ruby/regexp /.+-10\.21.+/
         :python-bambou: !ruby/regexp /.+-3\.1\.1.+/
         :python-pylxca: !ruby/regexp /.+-2\.1\.1.+/
@@ -53,9 +53,9 @@ rpm_repository:
         :qpid-proton: !ruby/regexp /.+-0\.30\.0.+/
         :repmgr13: !ruby/regexp /.+-5\.2\.1.+/
         :wmi: !ruby/regexp /.+-1\.3\.14.+/
-    :17-quinteros-nightly:
+    :18-radjabov-nightly:
       :targets:
       - el8
       - el9
       :rpms:
-        :manageiq-nightly: !ruby/regexp /.+-17\.\d\.\d-(\d\.\d\.)?\d{14,}+\.el.+/
+        :manageiq-nightly: !ruby/regexp /.+-18\.\d\.\d-(\d\.\d\.)?\d{14,}+\.el.+/
