@@ -1,0 +1,41 @@
+[manageiq-18-radjabov]
+name=ManageIQ 18 (Radjabov) Release - $basearch
+baseurl=https://rpm.manageiq.org/release/18-radjabov/el$releasever/$basearch
+enabled=1
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-18-radjabov-noarch]
+name=ManageIQ 18 (Radjabov) Release - noarch
+baseurl=https://rpm.manageiq.org/release/18-radjabov/el$releasever/noarch
+enabled=1
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-18-radjabov-source]
+name=ManageIQ 18 (Radjabov) Release - source
+baseurl=https://rpm.manageiq.org/release/18-radjabov/el$releasever/src
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-18-radjabov-nightly]
+name=ManageIQ 18 (Radjabov) Nightly - $basearch
+baseurl=https://rpm.manageiq.org/release/18-radjabov-nightly/el$releasever/$basearch
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-18-radjabov-nightly-noarch]
+name=ManageIQ 18 (Radjabov) Nightly - noarch
+baseurl=https://rpm.manageiq.org/release/18-radjabov-nightly/el$releasever/noarch
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-18-radjabov-nightly-source]
+name=ManageIQ 18 (Radjabov) Nightly - source
+baseurl=https://rpm.manageiq.org/release/18-radjabov-nightly/el$releasever/src
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
