@@ -1,4 +1,7 @@
 %changelog
+* Sat Aug 12 2023 Jason Frey <fryguy9@gmail.com> - 18.0.0-1
+- Initial build of manageiq-release for Radjabov.
+
 * Thu Feb 16 2023 Jason Frey <fryguy9@gmail.com> - 17.0.0-1
 - Initial build of manageiq-release for Quinteros.
 
